# Runner-Gunner

./: .clang-format  .gitignore  CMakeLists.txt  README.md  dep.sh  install.sh  updateDep.sh
include/: header.h  sprite.h
include/libs/: glad.h
src/: deallocation.cpp  gameLoop.cpp  handleClouds.cpp  handleEvents.cpp  initRect.cpp  initSDL.cpp  initTextures.cpp  main.cpp  sprite.cpp  updateRenderer.cpp
src/functions/: leftMV.cpp  leftSpace.cpp  rightMV.cpp  rightSpace.cpp  space.cpp
src/handlers/: gameLoop.cpp  handleClouds.cpp  handleEvents.cpp  handleLoop.cpp  logic.cpp
src/libs/: glad.c
src/memory/: deallocation.cpp  initRect.cpp  initSDL.cpp  initTextures.cpp
